--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,8 +21,10 @@
 @import'./web/product';
 @import'./web/step';
 @import'./web/shopping';
-@import'./web/footer';
-@import'./web/login';
+@import'./web/filters';
 @import'./web/profile';
 @import'./web/view-product';
+@import'./web/footer';
+@import'./web/login';
+
 
