--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13541,12 +13541,13 @@ i.rotate-icon:not(.row-t) {
 .content-shopping .tab-profile .prod-pusrcha-details,
 .content-profile .container .prod-pusrcha-details,
 .content-profile .tab-profile .prod-pusrcha-details {
-  background-color: #F53F3D;
+  background-color: white;
   border-radius: 10px;
   padding: 15px;
   margin: 0px 10px;
   position: relative;
   width: 300px;
+  border: solid 1px #8D8D8D;
 }
 
 .content-shopping .container .prod-pusrcha-details .pur-item,
