--- a/resources/sass/web/_shopping.scss
+++ b/resources/sass/web/_shopping.scss
@@ -323,12 +323,13 @@
 
 
         .prod-pusrcha-details{
-            background-color: #F53F3D; //new;
+            background-color: white; //new;
             border-radius: 10px;
             padding: 15px;
             margin: 0px 10px;
             position: relative;
             width: 300px;
+            border: solid 1px #8D8D8D;
             .pur-item{
                 margin-bottom: 13px;
             }
